bug fix for carousel container, which collapses on iPad 2.

--- a/css/calpress.css
+++ b/css/calpress.css
@@ -465,8 +465,14 @@ body.front article footer{
 
 /*===== Carousel ======*/
 
+
+
 #carousel-container article{
 	padding: 0;
+}
+
+#carousel-container {
+	height: 400px;
 }
 
 .ie7 .iosSlider{
@@ -1804,6 +1810,10 @@ and (max-width : 620px)
 	body.single article{
 		padding: 0;
 		margin: 0;
+	}
+	
+	#carousel-container{
+		height: auto !important;
 	}
 	
 	#carousel-navigation{
